syntax = "proto3";

option go_package = ".;hello";

service HelloServer {
    rpc SayHi(HelloRequest) returns (HelloReplay) {}
    rpc GetMsg(HelloRequest) returns (HelloMessage) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReplay {
    string message = 1;
}

message HelloMessage {
    string msg = 1;
}